--- a/app/views/people/_timeline_roles.html.haml
+++ b/app/views/people/_timeline_roles.html.haml
@@ -7,12 +7,12 @@
           - if role.class == GroupingHelper::GroupedObject
             - role_type_start = t('.mp_for')
             - role_type_link = link_to("#{role.nodes[0].constituency.name} #{date_string}", constituency_path(role.nodes[0].constituency.graph_id))
-            - role_type = "#{role_type_start} #{role_type_link}".html_safe
+            - role_type = sanitize "#{role_type_start} #{role_type_link}"
             = render 'timeline_role', role: role, role_type: role_type, role_title: "Elected #{role.nodes.count} times"
           - else
             - role_type_start = t('.mp_for')
             - role_type_link = link_to("#{role.constituency.name} #{date_string}", constituency_path(role.constituency.graph_id))
-            - role_type = "#{role_type_start} #{role_type_link}".html_safe
+            - role_type = sanitize "#{role_type_start} #{role_type_link}"
             = render 'timeline_role', role: role, role_type: role_type, role_title: t('.parliamentary_role').capitalize
 
         - elsif role.house_of_lords?
