fix(lords-related-links): check if current MP or an image for weblinks

--- a/app/views/people/_related_links.html.haml
+++ b/app/views/people/_related_links.html.haml
@@ -1,4 +1,4 @@
-- if @person.weblinks? || (Pugin::Feature::Bandiera.show_list_images? && @person.image_id(show_placeholder:false))
+- if (@person.weblinks? && @person.current_mp?) || (Pugin::Feature::Bandiera.show_list_images? && @person.image_id(show_placeholder:false))
   %section
     .container
       .block--border__bottom
