--- a/app/views/hybrid_bills/steps/writing-your-petition-online.haml
+++ b/app/views/hybrid_bills/steps/writing-your-petition-online.haml
@@ -1,4 +1,4 @@
-- page_title = title("#{t('hybrid_bills.email.writing_petition').capitalize} #{t('hybrid_bills.hyphen')} #{t('hybrid_bills.writing-your-petition-online.online')}. #{t('hybrid_bills.object_to').capitalize} #{t('hybrid_bills.the')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}")
+- page_title = title("#{t('hybrid_bills.email.writing_petition').capitalize} #{t('hybrid_bills.hyphen')} #{t('hybrid_bills.writing-your-petition-online.online')}. #{t('hybrid_bills.id' + @business_id + '.object_title')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}")
 
 
 #content.hero.theme--grey-4{ tabindex: '0' }
@@ -6,7 +6,7 @@
     %h1
       = "#{t('hybrid_bills.email.writing_petition').capitalize} #{t('hybrid_bills.hyphen')} #{t('hybrid_bills.writing-your-petition-online.online')}"
       %span.sr-only .
-      %span= "#{t('hybrid_bills.object_to').capitalize} #{t('hybrid_bills.the')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"
+      %span= "#{t('hybrid_bills.id' + @business_id + '.object_title')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"
 
     %h2.typography--light
       = "#{t('hybrid_bills.step_1').capitalize} #{t('hybrid_bills.step_1_5')}"
@@ -37,7 +37,7 @@
         .list--details
           %h3= t('hybrid_bills.help_support_template').capitalize
 
-          %a{ href: 'https://s3-eu-west-1.amazonaws.com/web1live.static-assets-public/_hybrid-bills/documents/HS2-Phase-2a-Petition-Template-Online.doc', class: 'btn--primary' }
+          %a{ href: "#{t('hybrid_bills.hb_s3_bucket')}#{t('hybrid_bills.id' + @business_id + '.template_online')}", class: 'btn--primary' }
             = render partial: 'pugin/icons/download'
             = t('user_forms.word_download_button')
 
