--- a/app/views/hybrid_bills/post.html.haml
+++ b/app/views/hybrid_bills/post.html.haml
@@ -1,17 +1,17 @@
-- page_title = title("#{t('hybrid_bills.object_to').capitalize} #{t('hybrid_bills.the')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}")
+- page_title = title("#{t('hybrid_bills.id' + @business_id + '.object_title')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}")
 
 #content.section--primary{ tabindex: '0' }
   .container
     %h1= page_title
 
     .status--highlight
-      %p= t('hybrid_bills.petition_status_post')
+      %p= "#{t('hybrid_bills.id' + @business_id + '.petition_status_post')}"
 
 %section
   .container
     %h2= t('hybrid_bills.show.overview').capitalize
 
-    %p= t('hybrid_bills.show.overview_a_bill')
+    %p= "#{t('hybrid_bills.id' + @business_id + '.overview_a')}"
 
     %p
       = t('hybrid_bills.show.overview_b')
