Hybrid bills - updated views and translations for additional provision

--- a/app/views/hybrid_bills/index.haml
+++ b/app/views/hybrid_bills/index.haml
@@ -50,8 +50,19 @@
     %h2= t('.current_hybrid_bills').capitalize
 
     %ol.list--block
+
+      %li
+        .list--details
+          %h3= link_to(("#{t('hybrid_bills.hs2_ap')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"), hybrid_bill_path('2'))
+          %p= t('hybrid_bills.id2.petition_status_pre')
+
+%section
+  .container
+    %h2= t('.past_hybrid_bills').capitalize
+
+    %ol.list--block
+
       %li
         .list--details
           %h3= link_to(("#{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"), hybrid_bill_path('1'))
-
-          %p= t('hybrid_bills.petition_status_post')
+          %p= t('hybrid_bills.id1.petition_status_post')
