Add product wrapper to Article and Collection pages
* Use orphaned ancestors of a collection to find root collection, for use as product wrapper
* Use extended_description when displaying a collection/show view, for a collection with parents
* Include subcollection description, and article summary when displying a collection/show view, for a collection without parents
* Amend tests
* Update parliament-grom-decorators gem to use new collection decorators
* Add config to allow table HTML tags as sanitized tags

--- a/app/views/collections/_root_collection.html.haml
+++ b/app/views/collections/_root_collection.html.haml
@@ -11,8 +11,10 @@
         %li
           .list--details
             %h3= link_to(sanitize(article.article_title), article_path(article.graph_id))
+            = MarkdownHelper.markdown(article.article_summary)
 
       - collection.subcollections.each do |subcollection|
         %li
           .list--details
             %h3= link_to(sanitize(subcollection.name), collection_path(subcollection.graph_id))
+            = MarkdownHelper.markdown(subcollection.description)
