[SI] Add procedure and work-package pages
* Add WorkPackagesController and ProceduresController
* Add views, tests
* Split out business item listing logic into a partial
* Add BusinessGroupingHelper for business item grouping methods
* Add BusinessItemHelper for business item helper methods
* Refactor GroupingHelper to hold only common grouping methods
* Refactor RoleHelper to split about role grouping methods
* Update grom-decorators, route, utils gems

--- a/app/views/people/_current_roles.html.haml
+++ b/app/views/people/_current_roles.html.haml
@@ -6,8 +6,8 @@
     = render 'current_role', role: role, role_type: "#{t('.opposition_role').capitalize}", role_title: "#{role.opposition_position.name}"
 
   - current_roles.fetch('SeatIncumbency', []).each do |role|
-    - if role.class == GroupingHelper::GroupedObject || role&.house_of_commons?
-      - if role.class == GroupingHelper::GroupedObject
+    - if role.class == RoleGroupingHelper::RoleGroupedObject || role&.house_of_commons?
+      - if role.class == RoleGroupingHelper::RoleGroupedObject
         - first_line_start = t('.mp_for')
         - first_line_end = link_to(role.nodes[0].constituency.name, constituency_path(role.nodes[0].constituency.graph_id))
         - first_line = "#{first_line_start} #{first_line_end}".html_safe
