[GTP-254] Made print translation global

--- a/app/views/shared/article/_footer.html.haml
+++ b/app/views/shared/article/_footer.html.haml
@@ -10,4 +10,4 @@
       .list--details
         = render partial: 'pugin/icons/print'
         %a.btn--print{ href: '#' }
-          = t('.print').capitalize
+          = t('print').capitalize
